# Project-3-1-EDMO

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  full_dimensions_cluster.pkl  full_dimensions_cluster_voice.pkl  requirements-1.txt  requirements-dev.txt  requirements.txt
Cluster-Analysis/: load_and_examine.py
alt_pipeline/: 3_cluster.pkl  avg_robot_speed_by_cluster.py  cluster_evaluation.py  cluster_evaluation_multilabel.py  cluster_prediction.py  cluster_probability_analysis.py  cluster_visualization_application.py  dim_red_clustering_functions.py  dimension_amount_testing.py  dimensionality reduction.py  full_dimensions_cluster.pkl  full_dimensions_cluster_voice.pkl  full_dimensions_clustering.py  further_clustering.py  json_extraction.py  matching_prediction.py  pipeline.py  plotting_pca_clustering.py  prediction_plotting.py  record_audio_with_pipeline.py  robot_speed_by_ground_truth.py  save_cluster.py  session_analysis_ui.py  start_services.sh  test_cluster.pkl  utils.py
alt_pipeline/data/: 093025_features.json  100854_features.json  111414_features.json  111455_features.json  114654_features.json  115451_features.json  130353_features.json  132617_features.json  133150_features.json  140252_features.json  ~$communication_annotation.xlsx
config/dev/: config.yaml
docs/: PROJECT_SUMMARY.md  agenda.md
experiments/: README.md
notebooks/: README.md  non_verbal_features.ipynb  service_tests.ipynb  tests.ipynb
src/: main.py
src/cpp_native/: CMakeLists.txt
(+54 files in other folders)
